--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,20 @@
     </style>
 
     <style name="ThemeCustom.TabLayout" parent="Theme.AppCompat.DayNight"/>
+
+    <style name="FKSwitch">
+        <item name="android:thumb">@drawable/view_switch_thumb</item>
+        <item name="android:track">@drawable/view_switch_track</item>
+    </style>
+
+    <style name="FKButtonLightGrey">
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:background">@drawable/button2</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textIsSelectable">false</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
